--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,122 @@ h1{
 p{
 	margin: 0 0 .5rem 0;
 	}
+
+/* My Styles */
+
+	.anim{
+
+		background: #09c;
+		width: 500px;
+		height: 300px;
+		border: solid #000 1px;
+		float: left;
+		margin: 0 1rem 1rem 0;
+		overflow: hidden;
+
+	}
+
+	.anim__headline{
+
+		color: #ff9;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 1.25rem;
+		font-weight: bold;
+		position: relative;
+		top: -30px;
+		left: 50px;
+		animation: h2-stuff 10s ease 0s forwards;
+
+	}
+
+	.anim__image{
+
+		position: relative;
+		top: 100px;
+		left: -250px;
+		animation: plane 10s linear forwards;
+
+	}
+
+	@keyframes h2-stuff{
+
+		0%{
+
+			top: -30px;
+			opacity: 0;
+
+		}
+
+		10% {
+
+			top: -30px;
+			opacity: 0;
+
+		}
+
+		15%{
+
+			top: 50px;
+			opacity: 1;
+
+		}
+
+		20%{
+
+			top: 50px;
+			opacity: 1;
+
+		}
+
+		100%{
+
+			top:50px;
+			opacity: 1;
+
+		}
+
+	}
+
+	@keyframes plane{
+
+		0%{
+
+			top: 100px;
+			left: -250px;
+			transform: rotate(0deg);
+
+		}
+
+		15% {
+
+			top: 100px;
+			left: -250px;
+			transform: rotate(0deg);
+
+		}
+
+		40%{
+
+			top: 0px;
+			left: 250px;
+			transform: rotate(-30deg);
+
+		}
+
+		50%{
+
+			top: -300px;
+			left: 300px;
+			transform: rotate(-90deg);
+
+		}
+
+		100%{
+
+			top: -300px;
+			left: 300px;
+			transform: rotate(-50deg);
+
+		}
+
+	}
